<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chat On</string>
    <string name="personal">My Info</string>
    <string name="details">Enter the following details:</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="submit">SUBMIT</string>
    <string name="status">What\'s on your mind !!!</string>
    <string name="dp">Tap to set a profile picture</string>
    <string name="title_activity_chat_page">Chats</string>
    <string name="title_activity_new_message">New Message</string>
    <string name="compose_new_message">Compose new Message</string>
    <string name="message">Message</string>
    <string name="title_activity_messages">Messages</string>
    <string name="hello_world">Hello world!</string>
    <string name="person_info">Person Info</string>
    <string name="title_activity_chat_info">ChatInfo</string>
    <string name="action_settings">Settings</string>

</resources>
