<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewMessage" >

    <Button
        android:id="@+id/sendMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sendMsg"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        android:minLines="4" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phonenumber"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/message"
        android:layout_below="@+id/name"
        android:layout_marginTop="50dp"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/phone"
        android:inputType="phone" >
    </EditText>

</RelativeLayout>